<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.joshworks.fstore</groupId>
    <artifactId>fstore</artifactId>
    <version>0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>serializer</module>
        <!--        <module>logstore</module>-->
        <module>codec</module>
        <!--        <module>event-store</module>-->
        <!--        <module>es-server</module>-->
        <!--        <module>lsmtree</module>-->
        <module>tcp</module>
        <!--        <module>es-client</module>-->
        <!--        <module>es-shared</module>-->
        <!--        <module>cli</module>-->
        <!--        <module>metrics</module>-->
        <!--        <module>eventry</module>-->
        <!--        <module>lsmtree-server</module>-->
        <module>cluster</module>
        <!--        <module>cluster-log-test</module>-->
<!--        <module>indexed-log</module>-->
<!--        <module>indexed-log-server</module>-->
<!--        <module>log-server-test</module>-->
        <module>stream-db</module>
        <module>stream-db2</module>
    </modules>

    <properties>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>indexed-log</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--            <dependency>-->
            <!--                <groupId>io.joshworks.fstore</groupId>-->
            <!--                <artifactId>lsmtree</artifactId>-->
            <!--                <version>${project.version}</version>-->
            <!--            </dependency>-->
            <!-- Serializers -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>json-serializer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>standard-serializer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>kryo-serializer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections-api</artifactId>
                <version>10.4.0</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>10.4.0</version>
            </dependency>

            <!-- Codecs -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>snappy-codec</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lz4-codec</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>standard-codec</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--            <dependency>-->
            <!--                <groupId>${project.groupId}</groupId>-->
            <!--                <artifactId>logstore</artifactId>-->
            <!--                <version>${project.version}</version>-->
            <!--            </dependency>-->

            <!--            <dependency>-->
            <!--                <groupId>${project.groupId}</groupId>-->
            <!--                <artifactId>event-store</artifactId>-->
            <!--                <version>${project.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>${project.groupId}</groupId>-->
            <!--                <artifactId>es-shared</artifactId>-->
            <!--                <version>${project.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>${project.groupId}</groupId>-->
            <!--                <artifactId>es-client</artifactId>-->
            <!--                <version>${project.version}</version>-->
            <!--            </dependency>-->


            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>tcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.joshworks.fstore</groupId>
                <artifactId>cluster</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.25</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>15</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>15</source>
                    <target>15</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>add-test-source</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/test-it/java</source>
                            </sources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-test-resource</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>src/test-it/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>